# clang-format

./: .clang-format  CMakeLists.txt  LICENSE  README.md
